<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ExitGameFragment"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:gravity="center"
    android:paddingLeft="15dp"
    android:paddingRight="15dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exit_game_message_title"
        android:gravity="center"
        android:layout_marginBottom="5dp"
        style="@style/recordBlackText" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exit_game_message_body"
        android:gravity="center"
        android:layout_marginBottom="5dp"
        style="@style/DefaultText" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/cancelButton"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/red"
            app:shapeAppearanceOverlay="@style/RectangularShape"
            android:text="@string/cancel_text"
            android:textSize="26sp"
            android:textAppearance="@style/recordText" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/yesButton"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            app:shapeAppearanceOverlay="@style/RectangularShape"
            app:strokeColor="@color/red"
            app:strokeWidth="1dp"
            android:text="@string/exit_text"
            android:textColor="@color/black"
            android:textSize="26sp"
            android:textAppearance="@style/recordBlackText"
            android:layout_marginStart="10dp" />
    </LinearLayout>

</LinearLayout>